IGNITE-16656 Adoption of a bunch of calcite related tickets from Ignite-2 - Fixes #707.
IGNITE-14681 Extend return type of sum() aggregate function
IGNITE-16414 Sorted index spool produces wrong collation
IGNITE-14963 Date interval arythmetic returns invalid results

Signed-off-by: zstan <stanilovsky@gmail.com>